Revert "FIX: Fix readability in clubs theme"
This reverts commit 5102629562754defa4f8329137fdbf4266e4aff8.

--- a/src/styles/clubs.theme.scss
+++ b/src/styles/clubs.theme.scss
@@ -9,7 +9,6 @@ $theme: (
 	surface-dark: 'dp-black',
 	background: 'dp-white-200',
 	dark-background: 'dp-black-600',
-	dark-mode: 'media',
 	extend: (
 		padding: (
 			xs: 0.3rem,
@@ -18,11 +17,9 @@ $theme: (
 			lg: 1rem,
 			xl: 1.2rem,
 		),
-		stroke: (
-			default: 3px,
-			set-accent-dark: 3,
-		),
 	),
+	stroke: 3px,
+	stroke-set-accent-dark: 3px white,
 );
 
 $button-theme: (
@@ -31,10 +28,13 @@ $button-theme: (
 		'xs',
 		'md',
 	),
+	ink: 'surface-600',
 	border-width: 'stroke',
+	border-focus: 'stroke-set-accent-dark',
 	fill: 'accent-600',
 	fill-hover: 'accent-200',
 	fill-active: 'accent-200',
+	fill-disabled: 'accent-400',
 );
 
 $form-field-theme: (
@@ -42,7 +42,12 @@ $form-field-theme: (
 		'lg',
 		'xl',
 	),
+	ink: 'surface-600',
+	label-ink: 'surface-600',
 	border-width: 'stroke',
+	border-focus: 'stroke-set-accent-dark',
+	fill: 'accent-600',
+	fill-disabled: 'accent-400',
 );
 
 $link-theme: (
@@ -54,12 +59,16 @@ $select-field-theme: (
 		'lg',
 		'xl',
 	),
+	ink: 'surface-600',
+	label-ink: 'surface-600',
 	border-width: 'stroke',
+	border-focus: 'stroke-set-accent-dark',
+	fill: 'accent-600',
+	fill-disabled: 'accent-400',
 );
 
 $tick-field-theme: (
 	radius: 'medium',
-	border-width: 'stroke',
 	padding: (
 		'lg',
 		'xl',
